# sqlite-utils-litecli

./: README.md  pyproject.toml  sqlite_utils_litecli.py
tests/: test_litecli.py
